--- a/index.html
+++ b/index.html
@@ -10,7 +10,35 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        <div class="left">
+            <div class="hero">
+                <img src="images/super-1.png" alt="logo"><br>
+                <span>Spiderman</span><br>
+                <span class="points">12</span>
+            </div>
+            <div class="hero">
+                <img src="images/super-3.png" alt="logo"><br>
+                <span>Wonder<br> Woman</span><br>
+                <span class="points">12</span>
+            </div>            
+        </div>
+        <div class="middle">
+            <span>5 - 0</span>
+        </div>
+        <div class="right">
+            <div class="villan">
+                <img src="images/super-2.png" alt="logo"><br>
+                <span>Captain<br> America</span><br>
+                <span class="points">12</span>
+            </div>
+            <div class="villan">
+                <img src="images/super-4.png" alt="logo"><br>
+                <span>Gem Woman</span><br>
+                <span class="points">12</span>
+            </div>
+        </div>
+    </div>
     <footer class="footer">Made with <img src="/images/Vector.svg"> by ProGrad</footer>
 </body>
 
